theme related bug fixs and improvments
fixed colours with themes. 
Alternative prices now appear when you try to update a job
Removed vertical lines from paper view.

--- a/WorkTracker/WorkTracker.csproj
+++ b/WorkTracker/WorkTracker.csproj
@@ -19,8 +19,8 @@
 		<ApplicationIdGuid>20D09131-3A8A-4699-A635-26E57F2BB6C5</ApplicationIdGuid>
 
 		<!-- Versions -->
-		<ApplicationDisplayVersion>1.1.5</ApplicationDisplayVersion>
-		<ApplicationVersion>13</ApplicationVersion>
+		<ApplicationDisplayVersion>1.83</ApplicationDisplayVersion>
+		<ApplicationVersion>16</ApplicationVersion>
 
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">14.2</SupportedOSPlatformVersion>
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'maccatalyst'">14.0</SupportedOSPlatformVersion>
@@ -38,6 +38,7 @@
 	  <AndroidKeyStore>False</AndroidKeyStore>
 	  <AndroidPackageFormat>aab</AndroidPackageFormat>
 	  <DebugSymbols>False</DebugSymbols>
+	  <EmbedAssembliesIntoApk>True</EmbedAssembliesIntoApk>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net6.0-ios|AnyCPU'">
@@ -161,9 +162,6 @@
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Layouts\QuickAddCustomer.xaml">
-	    <Generator>MSBuild:Compile</Generator>
-	  </MauiXaml>
-	  <MauiXaml Update="Layouts\SetCustomerPayment.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Layouts\SettingLayout.xaml">
